[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/PlayerRoot.gd" type="Script" id=1]
[ext_resource path="res://sprites/player/playerRun.png" type="Texture" id=2]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/laser.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/shot.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/ironDamage.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/reload.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 11.5449

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 11.216, 11.7794 )

[node name="PlayerRoot" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerSprite" type="Sprite" parent="." index="0"]

z_index = 1
texture = ExtResource( 2 )
hframes = 5
_sections_unfolded = [ "Animation", "Z Index" ]

[node name="PlayerArea" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="PlayerShape" type="CollisionShape2D" parent="PlayerArea" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerAreaBelow" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="PlayerShape" type="CollisionShape2D" parent="PlayerAreaBelow" index="0"]

position = Vector2( 0, 12 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerAreaAbove" type="Area2D" parent="." index="3"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="PlayerShape" type="CollisionShape2D" parent="PlayerAreaAbove" index="0"]

position = Vector2( 0, -12 )
scale = Vector2( 0.5, 1 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerAreaRight" type="Area2D" parent="." index="4"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="PlayerShape" type="CollisionShape2D" parent="PlayerAreaRight" index="0"]

position = Vector2( 10, 0 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerAreaLeft" type="Area2D" parent="." index="5"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="PlayerShape" type="CollisionShape2D" parent="PlayerAreaLeft" index="0"]

position = Vector2( -10, 0 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="PlayerShotTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="PlayerReloadTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="PlayerInvulTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="PlayerDeathTimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="PlayerAudioJump" type="AudioStreamPlayer2D" parent="." index="10"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="PlayerAudioLaser" type="AudioStreamPlayer2D" parent="." index="11"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Laser Bus"
area_mask = 1

[node name="PlayerAudioShot" type="AudioStreamPlayer2D" parent="." index="12"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Laser Bus"
area_mask = 1

[node name="PlayerAudioIronDamage" type="AudioStreamPlayer2D" parent="." index="13"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="PlayerAudioReload" type="AudioStreamPlayer2D" parent="." index="14"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ScoreTimer" type="Timer" parent="." index="15"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="PlayerAnimTimer" type="Timer" parent="." index="16"]

process_mode = 1
wait_time = 0.08
one_shot = false
autostart = true

[connection signal="area_entered" from="PlayerArea" to="." method="_on_PlayerArea_area_entered"]

[connection signal="area_entered" from="PlayerAreaBelow" to="." method="_on_PlayerAreaBelow_area_entered"]

[connection signal="area_exited" from="PlayerAreaBelow" to="." method="_on_PlayerAreaBelow_area_exited"]

[connection signal="area_entered" from="PlayerAreaAbove" to="." method="_on_PlayerAreaAbove_area_entered"]

[connection signal="area_exited" from="PlayerAreaAbove" to="." method="_on_PlayerAreaAbove_area_exited"]

[connection signal="area_entered" from="PlayerAreaRight" to="." method="_on_PlayerAreaRight_area_entered"]

[connection signal="area_exited" from="PlayerAreaRight" to="." method="_on_PlayerAreaRight_area_exited"]

[connection signal="area_entered" from="PlayerAreaLeft" to="." method="_on_PlayerAreaLeft_area_entered"]

[connection signal="area_exited" from="PlayerAreaLeft" to="." method="_on_PlayerAreaLeft_area_exited"]

[connection signal="timeout" from="PlayerShotTimer" to="." method="_on_PlayerShotTimer_timeout"]

[connection signal="timeout" from="PlayerReloadTimer" to="." method="_on_PlayerReloadTimer_timeout"]

[connection signal="timeout" from="PlayerInvulTimer" to="." method="_on_PlayerInvulTimer_timeout"]

[connection signal="timeout" from="PlayerDeathTimer" to="." method="_on_PlayerDeathTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="PlayerAnimTimer" to="." method="_on_PlayerAnimTimer_timeout"]


